RESOLVED FIXED291599
CSS property value `unset` does not disable native appearance for widgets
https://bugs.webkit.org/show_bug.cgi?id=291599
Summary CSS property value `unset` does not disable native appearance for widgets
Lily Spiniolas
Reported 2025-04-15 15:54:52 PDT
For CSS properties which should disable native appearance for author-specified values, setting the property value to `unset` does not disable native appearance.
Attachments
Lily Spiniolas
Comment 1 2025-04-15 15:55:22 PDT
Lily Spiniolas
Comment 2 2025-04-15 15:58:48 PDT
Lily Spiniolas
Comment 3 2025-04-15 17:04:32 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/52017
EWS
Comment 4 2025-04-16 12:27:21 PDT
Committed 293767@main (c789fa57f215): <https://commits.webkit.org/293767@main> Reviewed commits have been landed. Closing PR #44122 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.