CSS property value `unset` does not disable native appearance for widgets https://bugs.webkit.org/show_bug.cgi?id=291599 rdar://149311324

Reviewed by Antti Koivisto and Abrar Rahman Protyasha.

The check for styles which should disable native appearance is no
longer skipped when the property value is unset. Added a WPT
test to ensure that widgets display the same when their background
and border have value 'unset' as they do when their background and border
have value 'initial'.

* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/native-appearance-disabled-for-value-unset-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/native-appearance-disabled-for-value-unset.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ui/reference/native-appearance-disabled-for-value-unset-ref.html: Added.
* Source/WebCore/style/StyleBuilder.cpp:
(WebCore::Style::Builder::applyProperty):

Canonical link: https://commits.webkit.org/293767@main